Remove overflow: hidden from Dialog. Although it makes dragging smoother on FF2/linux, it causes a disappearing cursor problem on FF2.  The bad outweighs the good. Fixes #7408, refs #5285.
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@14913 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -1236,7 +1236,6 @@ img.dijitColorPaletteUnder {
 	position: absolute;
 	z-index: 999;
 	padding: 1px;
-	overflow: hidden;	/* override overflow: auto; from ContentPane to make dragging smoother */
 }
 
 .dijitDialogFixed div.dijitDialogTitleBar {
